--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,12 @@
 		<title>Asteroids</title>
 		<link type="text/css" rel="stylesheet" href="css/main.css">
 		
-		<script src="socket.io-1.2.0.js"></script>
-		<script src="jquery-1.11.1.js"></script>
-		<script src="Shoot.js"></script>
-		<script src="Star.js"></script>
-		<script src="Smoke.js"></script>
+		<script src="js/socket.io-1.2.0.js"></script>
+		<script src="js/jquery-1.11.1.js"></script>
+		
+		<script src="js/Shoot.js"></script>
+		<script src="js/Star.js"></script>
+		<script src="js/Smoke.js"></script>
 		<script src="js/Game.js"></script>
 		
 	</head>
