--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 		<script src="js/Shoot.js"></script>
 		<script src="js/Star.js"></script>
 		<script src="js/Smoke.js"></script>
+		<script src="js/Particles.js"></script>
 		<script src="js/Game.js"></script>
 		
 	</head>
